# rust-actix-server-prototype

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
docker/: Dockerfile  docker-compose.yml
src/: auth.rs  build.rs  cache.rs  config.rs  database.rs  errors.rs  extractors.rs  helpers.rs  routes.rs  server.rs  state.rs  validate.rs
src/handlers/: auth.rs  health.rs  user.rs
src/middleware/: auth.rs
src/models/: user.rs
src/tests/: auth.rs  helpers.rs  user.rs
