[package]
name = "rust_actix_server_prototype"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
# actix-redis のバージョンに依存。> 0.12 ではエラー
actix = "0.12.0"
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-identity = "0.4.0"
actix-redis = "0.11.0"
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-web-actors = "4.1.0"
argon2rs = "0.2.1"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
diesel_derives = "~1.4.0"
dotenv = "0.15.0"
envy = "0.4"
env_logger = "0.9.0"
futures = "0.3.1"
jsonwebtoken = "8.1.0"
lazy_static = "1.4"
listenfd = "0.5.0"
log = "0.4"
openssl = "0.10.40"
rayon = "1.0"
redis-async = "0.12.1"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.3.9"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
validator = "0.15.0"
validator_derive = "0.15.0"

[dev-dependencies]
actix-http-test = "2.1.0"

[features]
mysql = []
postgres = []
sqlite = []
default = ["postgres"]
